Apply IDEA code formatting